Armstrong moon 2, Science Defs, Gwargin scatterer
* Add Desmet, the second and final satellite of Armstrong.
* Make shadow strength of all stars = 1. Shadows on planetary surfaces should be darker; though it seems like this only really works for the nearest star.
* Fix for nearly black skies on Gwargin, due to incorrect configPoints syntax.
* Fix for Ljos heating curve.
* Science defs for Buzz & Desmet.

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -67,6 +67,21 @@
 			}
 		}
 	}
+	@Body[Buzz]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 3.8
+				inSpaceLowDataValue = 2
+				inSpaceHighDataValue = 1.8
+				recoveryValue = 1.5
+				spaceAltitudeThreshold = 16000
+			}
+		}
+	}
 	@Body[Lu]
 	{
 		@Properties
