--- a/GameData/PJ2/KopernicusFiles/0_Suns/0_Barycenter.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/0_Barycenter.cfg
@@ -46,6 +46,8 @@
 				!IntensityCurve{}
 				!IVAIntensityCurve{}
 				!ScaledIntensityCurve{}
+				ambientLightColor = 0,0,0,0
+				sunlightShadowStrength = 1
 				IntensityCurve
 				{
 					0 0 0 0 
