--- a/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
@@ -31,14 +31,14 @@
         {
 			Light
 			{
-				ambientLightColor = 0.02, 0.02, 0.02, 1.0
+				ambientLightColor = 0,0,0,0
 				sunAU = 84701475
 				sunlightColor = 1,1,1,1
 				scaledSunlightColor = 1,1,1,1
 				IVASunColor = 1,1,1,1
 				sunLensFlareColor = 1,1,1,1
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
-				
+				sunlightShadowStrength = 1
 				radiationFactor = 0.7514467487 //At sqrt2 kAU
 				
 				brightnessCurve
