--- a/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
@@ -33,14 +33,14 @@
         {
 			Light
 			{
-				ambientLightColor = 0.02, 0.02, 0.02, 1.0
+				ambientLightColor = 0,0,0,0
 				sunAU = 59767587
 				sunlightColor = 1.017,0.997,0.957,1
 				scaledSunlightColor = 1.017,0.997,0.957,1
 				IVASunColor = 1.017,0.997,0.957,1
 				sunLensFlareColor = 1.017,0.997,0.957,1
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
-				
+				sunlightShadowStrength = 1
 				radiationFactor = 0.2485532513 //At Sqrt2 kAU
 				
 				brightnessCurve
