--- a/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -81,9 +81,9 @@
 				scaledSunlightIntensity = 0.9
 				sunlightIntensity = 0.9
 				sunAU = 7450947
-				ambientLightColor = 0.05,0.05,0.05,1
+				ambientLightColor = 0,0,0,0
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
-				
+				sunlightShadowStrength = 1
 				radiationFactor = 0.000245 //at Sqrt2 AU
 				
 				!brightnessCurve {}
