Sandy's Moons, Ulen Art Pass, New Science
* Added Hailing Frequencies experiment to all antenna parts (aside from command pods). It doesn't give much science but hey, a null result is a null result.
* Add Sandevistan's two moons, Tremelo and Montauk, by Wolf-Rayet and Techo respectively.
* Tremelo has biomes, Montauk does not.
* Science definitions for Lu.
* Disable GooProbePrototype part for now.
* Adjust a few settings files.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
@@ -80,11 +80,9 @@
                     0.1 = #000000
                     1.0 = #000000
                 }
-	        }
-			OnDemand
-			{
-				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/megaearh_Color.dds
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/megertnormals.dds
+	        
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Ulen_Color.dds
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Ulen_Normal.dds
 			}
 		}
 		Atmosphere				
@@ -247,23 +245,23 @@
    			 	VertexHeightMap
 				{
       				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/megearthheight_v3.png
-      				offset = -1210
-      				deformity = 2500
+      				offset = -6000
+      				deformity = 13000
       				scaleDeformityByRadius = false
       				order = 20
       				enabled = true
 				}
     			VertexColorMap
     			{
-      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/megearthcolor_v4.png
+      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Ulen_PQSColor.png
       				order = 20
       				enabled = true
     			}
 				VertexSimplexHeight
 				{
-					deformity = 300
-					frequency = 9
-					octaves = 8
+					deformity = 1000
+					frequency = 16
+					octaves = 12
 					persistence = 0.5
 					seed = 2211221
 					order = 102
@@ -274,9 +272,9 @@
 				{
 					heightStart = 0
 					heightEnd = 1
-					deformity = 200
-					frequency = 12
-					octaves = 6
+					deformity = 700
+					frequency = 16
+					octaves = 12
 					persistance = 0.5
 					seed = 1283704385
 					mode = Low
@@ -290,16 +288,16 @@
 		}
 		Ocean
 		{
-			oceanColor = RGBA(158,49,29,255)
+			oceanColor = 0.507692397,0.33846131,0.203846246,1
 			Material
 			{
-				color = RGBA(158,49,29,255)
-				colorFromSpace = RGBA(87,19,16,255)
+				color = 1.20000005,0.530769348,0.280769348,1
+				colorFromSpace = 0.507692397,0.33846131,0.203846246,1
 			}
 			FallbackMaterial
 			{
-				color = RGBA(158,49,29,255)
-				colorFromSpace = RGBA(87,19,16,255)
+				color = 1.20000005,0.530769348,0.280769348,1
+				colorFromSpace = 0.507692397,0.33846131,0.203846246,1
 			}
 	}
 }
