--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/1_Buzz.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/1_Buzz.cfg
@@ -16,6 +16,7 @@
 			inverseRotThresholdAltitude = 5500
 			sphereOfInfluence = 8000
 			geeASL = 0.3
+			displayName = Buzz^N
 			tidallyLocked = True
 			description = Buzz is the most terrifying object visible from Armstrong without the use of optical aid, with perhaps the sole exception of Pyri. It can be seen for mere minutes at a time as it passes overhead at a tremendous speed, and evades telescopic observation with almost any instrument not built specifically to view it. It is thought to be a monolithic chunk of nickel-iron, and calculations suggest its surface gravity to be effectively negative at the equator, as it rotates so fast centrifugal forces are expected to sling material away at higher than escape velocity.\n    Buzz has multiple names in various cultures, ranging from the Mesbinite moniker of "Statmun Two The Sequel to Statmun Where It's Even Scarier" to names of various flying creatures such as Kerbin's "Vulture", Limnus' "Skyestreek," Alternis' "Dragon," or Serina's "Archangel," to mere transliterations of the vocalization of shaking terror you feel when it passes overhead when you least expect it.\n     Its officially accepted name, Buzz, originates from a joke made at The Center for Theoretical Aviation conference about how the terrifying moon seems to buzz you when you least expect, a term used in theoretical aviation to refer to a theoretical maneuver whereby you would pass close to the ground as a warning or a surprise, and, get this, NOT hit the ground entirely.\n\n<color=#19bdbd>-Luna Gregoria</color>
 			initialRotation = 330
@@ -26,49 +27,49 @@
 				Biome
 				{
 					name = Rubble
-					displayName = Rubble 
+					displayName = Rubble^N
 					color = RGBA(130,53,2,255)
 					value = 1
 				}
 				Biome
 				{
 					name = Cement
-					displayName = Cement 
+					displayName = Cement^N 
 					color = RGBA(141,149,153,255)
 					value = 1
 				}
 				Biome
 				{
 					name = SmoothCraters
-					displayName = Smooth Craters
+					displayName = Smooth Craters^N
 					color = RGBA(104,133,156,255)
 					value = 1
 				}
 				Biome
 				{
 					name = RubbleCraters
-					displayName = Rough Craters
+					displayName = Rough Craters^N
 					color = RGBA(156,120,104,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NMountain
-					displayName = Northern Farside Mountain
+					displayName = Northern Farside Mountain^N
 					color = RGBA(130,1,2,255)
 					value = 1
 				}
 				Biome
 				{
 					name = SMountain
-					displayName = Southern Farside Mountain
+					displayName = Southern Farside Mountain^N
 					color = RGBA(131,102,1,255)
 					value = 1
 				}
 				Biome
 				{
 					name = Signal
-					displayName = Square Walls 
+					displayName = Square Walls^N 
 					color = RGBA(255,255,255,255)
 					value = 1
 				}
