--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/2_Desmet.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/2_Desmet.cfg
@@ -21,6 +21,7 @@
 			inverseRotThresholdAltitude = 20000
 			sphereOfInfluence = 32000
 			tidallyLocked = True
+			displayName = Desmet^N
 			description = Desmet is the second of Armstrong's two natural satellites, and unlike Buzz, it is actually beyond the roche limit. Unfortunately this leads to another mystery: so far out from Armstrong, how does it manage to keep from being pulled away into deep space? Some astronomers have suggested that Desmet isn't actually a moon, rather a disturbingly nearby quasisatellite, but a proper study into its orbital stability over time has not been undertaken due to "computational complexity," or as some call it, Arithmophobia.\n\n<color=#19bdbd>-Luna</color> & <color=#d358c8>-Wolf Rayet</color>.
 			initialRotation = 90
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 1000
@@ -30,42 +31,42 @@
 				Biome
 				{
 					name = Lowland
-					displayName = Lowland
+					displayName = Lowland^N
 					color = #2b2d58
 					value = 1
 				}
 				Biome
 				{
 					name = Highland
-					displayName = Highland
+					displayName = Highland^N
 					color = #8b8dcf
 					value = 1
 				}
 				Biome
 				{
 					name = Equator
-					displayName = Equator
+					displayName = Equator^N
 					color = RGBA(197,200,255,255)
 					value = 1
 				}
 				Biome
 				{
 					name = Scrapes
-					displayName = Scrapes
+					displayName = Scrapes^N
 					color = #139a9e
 					value = 1
 				}
 				Biome
 				{
 					name = Craters
-					displayName = Craters
+					displayName = Craters^N
 					color = #000354
 					value = 1
 				}
 				Biome
 				{
 					name = Basin
-					displayName = Ingress Basin
+					displayName = Ingress Basin^N
 					color = #ffffff
 					value = 1
 				}
