--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -3,9 +3,9 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = PJ2Settings
+		name = ????
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Cache/Cbx.bin
-		identifier = PJ2/Settings
+		identifier = PJ2/????
 		Template
 		{
 			name = Minmus
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			displayName = Settings^N
+			displayName = ????
 			description = I'm so glad you're finally here.\n -Wolf Rayet.
 			radius = 9500
 			geeASL = 1.75
@@ -23,19 +23,43 @@
 			RnDVisibility = Hidden
 			ScienceValues
 			{
-				landedDataValue = 0
-				inSpaceLowDataValue = 0
-				inSpaceHighDataValue = 0
+				landedDataValue = 10
+				inSpaceLowDataValue = 10
+				inSpaceHighDataValue = 10
 				recoveryValue = 10
 				spaceAltitudeThreshold = 20000
 
+			}
+			Biomes
+			{
+				Biome
+				{
+					name = Plains
+					displayName = Plains
+					color = RGBA(198,196,132,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Hills
+					displayName = Hills
+					color = RGBA(102,144,34,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Embrace
+					displayName = Embrace^N
+					color = RGBA(85,108,6,255)
+					value = 1
+				}
 			}
 		}
 		Orbit
 		{
 			referenceBody = PJ2/C_Pyri
-			eccentricity = 0.08
-			inclination = 0.1
+			eccentricity = 0
+			inclination = 0
 			meanAnomalyAtEpochD = 45
 			argumentOfPeriapsis = 22
 			longitudeOfAscendingNode = 113
@@ -54,7 +78,7 @@
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PluginData/CBx_Color.dds
-            			normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PluginData/CBx_Normal.dds
+            	normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PluginData/CBx_Normal.dds
 			}
 			Material
 			{
