--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -25,189 +25,189 @@
 				Biome
 				{
 					name = NearHighlands
-					displayName = Synpyrian Montes
+					displayName = Synpyrian Montes^N
 					color = RGBA(192,192,160,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearMidlands
-					displayName = Synpyrian Terrae
+					displayName = Synpyrian Terrae^N
 					color = RGBA(160,160,128,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearLowlands
-					displayName = Synpyrian Planitiae
+					displayName = Synpyrian Planitiae^N
 					color = RGBA(96,64,88,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearMaria
-					displayName = Synpyrian Maria
+					displayName = Synpyrian Maria^N
 					color = RGBA(64,32,56,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarHighlands
-					displayName = Antipyrian Montes
+					displayName = Antipyrian Montes^N
 					color = RGBA(192,192,186,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarMidlands
-					displayName = Antipyrian Terrae
+					displayName = Antipyrian Terrae^N
 					color = RGBA(160,160,152,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarLowlands
-					displayName = Antipyrian Planitiae
+					displayName = Antipyrian Planitiae^N
 					color = RGBA(96,88,96,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarMaria
-					displayName = Antipyrian Maria
+					displayName = Antipyrian Maria^N
 					color = RGBA(64,56,64,255)
 					value = 1
 				}
 				Biome
 				{
 					name = DayRayCraters
-					displayName = Young Synpyrian Craters
+					displayName = Young Synpyrian Craters^N
 					color = RGBA(224,64,64,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NightRayCraters
-					displayName = Young Antipyrian Craters
+					displayName = Young Antipyrian Craters^N
 					color = RGBA(224,128,128,255)
 					value = 1
 				}
 				Biome
 				{
 					name = DayBasins
-					displayName = Synpyrian Basins
+					displayName = Synpyrian Basins^N
 					color = RGBA(192,96,64,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NightBasins
-					displayName = Antipyrian Basins
+					displayName = Antipyrian Basins^N
 					color = RGBA(192,160,96,255)
 					value = 1
 				}
 				Biome
 				{
 					name = OldBasins
-					displayName = Ancient Basins
+					displayName = Ancient Basins^N
 					color = RGBA(160,192,96,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearOcean
-					displayName = Oceanus Caldor
+					displayName = Oceanus Caldor^N
 					color = RGBA(56,8,40,255)
 					value = 1
 				}
 				Biome
 				{
 					name = RecentLava
-					displayName = Eratosthenian Maria
+					displayName = Eratosthenian Maria^N
 					color = RGBA(40,8,96,255)
 					value = 1
 				}
 				Biome
 				{
 					name = GreaterFloodedBasin
-					displayName = Mare Sappho
+					displayName = Mare Sappho^N
 					color = RGBA(0,88,8,255)
 					value = 1
 				}
 				Biome
 				{
 					name = LesserFloodedBasin
-					displayName = Sinus Sodor
+					displayName = Sinus Sodor^N
 					color = RGBA(16,64,56,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearCentralBasin
-					displayName = Synpyrian Mare Centralia
+					displayName = Synpyrian Mare Centralia^N
 					color = RGBA(192,64,192,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarCentralBasin
-					displayName = Antipyrian Mare Centralia
+					displayName = Antipyrian Mare Centralia^N
 					color = RGBA(192,128,192,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearNorthernBasin
-					displayName = Synpyrian Paludes Septentrionale
+					displayName = Synpyrian Paludes Septentrionale^N
 					color = RGBA(0,80,128,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarNorthernBasin
-					displayName = Antipyrian Paludes Septentrionale
+					displayName = Antipyrian Paludes Septentrionale^N
 					color = RGBA(0,80,80,255)
 					value = 1
 				}
 				Biome
 				{
 					name = NearNorthernMaria
-					displayName = Synpyrian Mare Boreale
+					displayName = Synpyrian Mare Boreale^N
 					color = RGBA(88,64,88,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarNorthernMaria
-					displayName = Antipyrian Mare Boreale
+					displayName = Antipyrian Mare Boreale^N
 					color = RGBA(64,48,64,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarsideBasinMountains
-					displayName = Montes Concentricum
+					displayName = Montes Concentricum^N
 					color = RGBA(160,128,160,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarsideBasinFloor
-					displayName = Novum Planitia
+					displayName = Novum Planitia^N
 					color = RGBA(96,64,96,255)
 					value = 1
 				}
 				Biome
 				{
 					name = FarsideBasinBlanket
-					displayName = Inner Ejecta Blanket
+					displayName = Inner Ejecta Blanket^N
 					color = RGBA(96,192,160,255)
 					value = 1
 				}
 				Biome
 				{
 					name = OverlainFarsideBasin
-					displayName = Vastus Incognitum
+					displayName = Vastus Incognitum^N
 					color = RGBA(192,96,160,255)
 					value = 1
 				}
