Scatterer for Every Atmosphere.
* Add scatterer atmospheres for all remaining atmospheric worlds, in the Oynag Mess, Descry system, Tobalk-Turtlestar system, Gerro-Sandevistan system, Ollo system, Tritonis system. A decorative rim-lighting-only atmosphere has been applied to Bifrost. (i.e., no "sky" up close)
* Atmosphere visuals in existing scatterer configs have been improved on all gas giants by changing the rimBlend and rimPower settings.
* Re-add Jool template atmosphere to Bifrost; necessary for scatterer compatibility.
* Add custom atmospheres to Sandevistan and Arterr.
* Double the SMA of Montauk, and make Tremelo a quasisatellite of it.
* Fix science definitions that were targeting the wrong identifier name causing their results to be displayed in the wrong situation.
* Add EVE emissives to Jejunum to replace the ugly Kopernicus Expansions emissives.
* Re-add Twilight's color map, which got lost at some point.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
@@ -74,23 +74,24 @@
 			}
 		}
 		Orbit
-		{
-			referenceBody = PJ2/Sandevistan
-			
-			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.47307691,0.380769223,0.292308152,1
-			
-			//orbital elements (DO NOT CHANGE)
-			//1 au (kerbal scale)
-			semiMajorAxis = 5262500
-			
-			eccentricity = 0.0092
-			inclination = 0.36
-			argumentOfPeriapsis = 19
-			longitudeOfAscendingNode = 200
-			meanAnomalyAtEpochD = 159
+        {
+            referenceBody = PJ2/Sandevistan
+
+            //THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
+            color = 0.47307691,0.380769223,0.292308152,1
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
-		}
+
+            //orbital elements (DO NOT CHANGE)
+            //1 au (kerbal scale)
+            semiMajorAxis = 5262500
+			@semiMajorAxis *= 2 //i never got permission from myth to double these orbits but im pretty sure tremelo gets shredded if i dont
+
+            inclination = 0.36
+            eccentricity = 0.456
+            longitudeOfAscendingNode = 200
+            argumentOfPeriapsis = 19
+            meanAnomalyAtEpochD = 20
+        }
 		ScaledVersion
 		{
 			fadeStart = 32000
