--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
@@ -15,11 +15,11 @@
 		Properties
 		{
 			displayName = Arterr
-			description = Arterr is Tritonis' largest satellite, and by far its brightest. Arterr is extremely reflective, reflecting more than 70% of the light that hits it, and is thought to be an enormous rocky planet covered entirely in snow-white ice. That high an albedo implies some kind of ongoing resurfacing mechanism, so it is possible the planet is cryovolcanic in nature--a hypothesis supported by Arterr's substantial atmosphere. \n-The Orios & Techo
+			description = Arterr is Tritonis' largest satellite, and by far its brightest. Arterr is extremely reflective, reflecting about than 80% of the light that hits it, and is thought to be an enormous rocky planet covered entirely in snow-white ice. That high an albedo implies some kind of ongoing resurfacing mechanism, so it is possible the planet is cryovolcanic in nature--a hypothesis supported by Arterr's substantial atmosphere. \n-The Orios & Techo
 			//do not leave this as the placeholder radius
 			radius = 772598.6 
 			tidallyLocked = true
-			
+			albedo =	0.8
 			// 1/100 earth mass in kilograms
 			geeASL = 1.57
 			ScienceValues
@@ -58,6 +58,159 @@
 			}
 		
 		}
+		Atmosphere				
+		{				
+			//10% N2
+			//4% O2
+			//0.9% Ar
+			//83.1% CO2
+			//1% SO2
+			//1% Trace Gases
+			enabled =	True			
+			oxygen =	False			
+			altitude =	47000			
+			adiabaticIndex =	1.31			
+			atmosphereMolarMass =	0.04207			
+			temperatureSeaLevel =	288			
+			staticPressureASL =	6079.5			
+			temperatureCurve				
+			{				
+				key =	0	288	0.00000E+00	-5.26820E-03
+				key =	2088	277	-5.26820E-03	-5.47809E-03
+				key =	4096	266	-5.47809E-03	-5.17598E-03
+				key =	6028	256	-5.17598E-03	-5.38213E-03
+				key =	7886	246	-5.38213E-03	-5.03074E-03
+				key =	9675	237	-5.03074E-03	-5.22952E-03
+				key =	11396	228	-5.22952E-03	-5.42823E-03
+				key =	13054	219	-5.42823E-03	-5.01253E-03
+				key =	14650	211	-5.01253E-03	-4.54841E-03
+				key =	16189	204	-4.54841E-03	-5.38721E-03
+				key =	17674	196	-5.38721E-03	-4.18702E-03
+				key =	19107	190	-4.18702E-03	-3.59195E-03
+				key =	20499	185	-3.59195E-03	0.00000E+00
+				key =	21875	185	0.00000E+00	2.87356E-03
+				key =	23267	189	2.87356E-03	4.20757E-03
+				key =	24693	195	4.20757E-03	4.07332E-03
+				key =	26166	201	4.07332E-03	4.59619E-03
+				key =	27689	208	4.59619E-03	3.19081E-03
+				key =	29256	213	3.19081E-03	1.25549E-03
+				key =	30849	215	1.25549E-03	-6.25782E-04
+				key =	32447	214	-6.25782E-04	-3.17460E-03
+				key =	34022	209	-3.17460E-03	-4.56919E-03
+				key =	35554	202	-4.56919E-03	-5.42373E-03
+				key =	37029	194	-5.42373E-03	-7.09220E-03
+				key =	38439	184	-7.09220E-03	-6.72143E-03
+				key =	39778	175	-6.72143E-03	-6.27943E-03
+				key =	41052	167	-6.27943E-03	-4.90196E-03
+				key =	42276	161	-4.90196E-03	-3.36417E-03
+				key =	43465	157	-3.36417E-03	-3.44828E-03
+				key =	44625	153	-3.44828E-03	-3.54610E-03
+				key =	45753	149	-3.54610E-03	0.00000E+00
+				key =	47000	144	-4.00962E-03	0.00000E+00
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	1.000	0.00000E+00	-1.25958E-04
+				key =	2088	0.737	-1.25958E-04	-1.20518E-04
+				key =	4096	0.495	-1.20518E-04	-1.11801E-04
+				key =	6028	0.279	-1.11801E-04	-9.90312E-05
+				key =	7886	0.095	-9.90312E-05	-8.44047E-05
+				key =	9675	-0.056	-8.44047E-05	-6.68216E-05
+				key =	11396	-0.171	-6.68216E-05	-4.76478E-05
+				key =	13054	-0.250	-4.76478E-05	-2.63158E-05
+				key =	14650	-0.292	-2.63158E-05	-1.94932E-06
+				key =	16189	-0.295	-1.94932E-06	4.71380E-05
+				key =	17674	-0.225	4.71380E-05	9.69993E-05
+				key =	19107	-0.086	9.69993E-05	1.39368E-04
+				key =	20499	0.108	1.39368E-04	1.77326E-04
+				key =	21875	0.352	1.77326E-04	2.09052E-04
+				key =	23267	0.643	2.09052E-04	2.37728E-04
+				key =	24693	0.982	2.37728E-04	2.61371E-04
+				key =	26166	1.367	2.61371E-04	2.81024E-04
+				key =	27689	1.795	2.81024E-04	2.94193E-04
+				key =	29256	2.256	2.94193E-04	3.03202E-04
+				key =	30849	2.739	3.03202E-04	3.04130E-04
+				key =	32447	3.225	3.04130E-04	3.00317E-04
+				key =	34022	3.698	3.00317E-04	2.90470E-04
+				key =	35554	4.143	2.90470E-04	2.74576E-04
+				key =	37029	4.548	2.74576E-04	2.53191E-04
+				key =	38439	4.905	2.53191E-04	2.30022E-04
+				key =	39778	5.213	2.30022E-04	2.02512E-04
+				key =	41052	5.471	2.02512E-04	1.72386E-04
+				key =	42276	5.682	1.72386E-04	1.39613E-04
+				key =	43465	5.848	1.39613E-04	1.03448E-04
+				key =	44625	5.968	1.03448E-04	6.64894E-05
+				key =	45753	6.043	6.64894E-05	2.32558E-05
+				key =	47000	6.072	2.32558E-05	0.00000E+00
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0	0	0
+				key =	90	0	0	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0	0	0
+				key =	90	0	0	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	0.61	0	-0.0146
+				key =	36	0	-0.018	-0.018
+				key =	126	-1.03	0	0
+				key =	216	0	0.018	0.018
+				key =	306	1.03	0	0
+				key =	360	0.61	-0.0146	0
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	0.35	0	-0.7
+				key =	1	-0.35	-0.7	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	6.07950E+03	0.00000E+00	-1.64410E+00
+				key =	2088	3.41875E+03	-9.61698E-01	-9.61698E-01
+				key =	4096	1.92251E+03	-5.62512E-01	-5.62512E-01
+				key =	6028	1.08110E+03	-3.28986E-01	-3.28986E-01
+				key =	7886	6.07950E+02	-1.92375E-01	-1.92375E-01
+				key =	9675	3.41875E+02	-1.12462E-01	-1.12462E-01
+				key =	11396	1.92251E+02	-6.57231E-02	-6.57231E-02
+				key =	13054	1.08110E+02	-3.83920E-02	-3.83920E-02
+				key =	14650	6.07950E+01	-2.24145E-02	-2.24145E-02
+				key =	16189	3.41875E+01	-1.30779E-02	-1.30779E-02
+				key =	17674	1.92251E+01	-7.62454E-03	-7.62454E-03
+				key =	19107	1.08110E+01	-4.44119E-03	-4.44119E-03
+				key =	20499	6.07950E+00	-2.55714E-03	-2.55714E-03
+				key =	21875	3.41875E+00	-1.43662E-03	-1.43662E-03
+				key =	23267	1.92251E+00	-7.92538E-04	-7.92538E-04
+				key =	24693	1.08110E+00	-4.32472E-04	-4.32472E-04
+				key =	26166	6.07950E-01	-2.35077E-04	-2.35077E-04
+				key =	27689	3.41875E-01	-1.28088E-04	-1.28088E-04
+				key =	29256	1.92251E-01	-7.03498E-05	-7.03498E-05
+				key =	30849	1.08110E-01	-3.91485E-05	-3.91485E-05
+				key =	32447	6.07950E-02	-2.21644E-05	-2.21644E-05
+				key =	34022	3.41875E-02	-1.27437E-05	-1.27437E-05
+				key =	35554	1.92251E-02	-7.41378E-06	-7.41378E-06
+				key =	37029	1.08110E-02	-4.34784E-06	-4.34784E-06
+				key =	38439	6.07950E-03	-2.57199E-06	-2.57199E-06
+				key =	39778	3.41875E-03	-1.52393E-06	-1.52393E-06
+				key =	41052	1.92251E-03	-8.98571E-07	-8.98571E-07
+				key =	42276	1.08110E-03	-5.22979E-07	-5.22979E-07
+				key =	43465	6.07950E-04	-3.01169E-07	-3.01169E-07
+				key =	44625	3.41875E-04	-1.73958E-07	-1.73958E-07
+				key =	45753	1.92251E-04	-1.00726E-07	-1.00726E-07
+				key =	47000	0.00000E+00	0.00000E+00	0.00000E+00		
+			}				
+		}	
 		
 		PQS
 		{
