--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
@@ -52,9 +52,9 @@
 				sumTemp = true
 				AltitudeCurve
 				{
-					key = 152000 1 0 0
-					key = 152300 0.25 0 0
-					key = 151000 0 0 0
+					key = 152000 2 0 0
+					key = 152300 0.5 0 0
+					key = 152500 0 0 0
 				}
 			}
 		}
@@ -102,6 +102,10 @@
 				brightness = 1
 				transparency = 0.5
 			}
+			@EmissiveOverlay:NEEDS[EnvironmentalVisualEnhancements]
+			{
+				@emissiveMap = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Jejunum_EmissiveTerrain.png
+			}
 		}
 		PQS
 		{
@@ -119,6 +123,10 @@
 					order = 5
 					enabled = true
 					map = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Jejunum_Color.dds
+				}
+				@VertexColorMap:NEEDS[EnvironmentalVisualEnhancements]
+				{
+					@map = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Jejunum_ColdColor.dds
 				}
 				VertexHeightMap
 				{
@@ -398,6 +406,7 @@
 			atmosphereMolarMass =	0.0022
 			temperatureSeaLevel =	111
 			staticPressureASL =	5.06625
+			ambientColor = 0.269230962,0.0500000603,0,0
 			AtmosphereFromGround
 			{
 				waveLength = 0.6615379,0.6626924,0.6353847,0
