--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
@@ -78,6 +78,135 @@
 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Normal.png
 			}
 		}
+		Atmosphere				
+		{				
+			enabled = True			
+			oxygen =	False			
+			altitude = 22000			
+			adiabaticIndex = 1.32			
+			atmosphereMolarMass = 0.0334			
+			temperatureSeaLevel = 338			
+			staticPressureASL = 77.20965			
+			temperatureCurve				
+			{				
+				key =	0	315	0.00000E+00	-4.96278E-03
+				key =	1209	309	-4.96278E-03	-4.29553E-03
+				key =	2373	304	-4.29553E-03	-5.35714E-03
+				key =	3493	298	-5.35714E-03	-6.48749E-03
+				key =	4572	291	-6.48749E-03	-6.72430E-03
+				key =	5613	284	-6.72430E-03	-7.96813E-03
+				key =	6617	276	-7.96813E-03	-8.23893E-03
+				key =	7588	268	-8.23893E-03	-9.58466E-03
+				key =	8527	259	-9.58466E-03	-8.79121E-03
+				key =	9437	251	-8.79121E-03	-9.06002E-03
+				key =	10320	243	-9.06002E-03	-8.14901E-03
+				key =	11179	236	-8.14901E-03	-8.37321E-03
+				key =	12015	229	-8.37321E-03	-7.35294E-03
+				key =	12831	223	-7.35294E-03	-7.51880E-03
+				key =	13629	217	-7.51880E-03	-6.39386E-03
+				key =	14411	212	-6.39386E-03	-6.51042E-03
+				key =	15179	207	-6.51042E-03	-6.62252E-03
+				key =	15934	202	-6.62252E-03	-5.38358E-03
+				key =	16677	198	-5.38358E-03	-5.47196E-03
+				key =	17408	194	-5.47196E-03	-5.55556E-03
+				key =	18128	190	-5.55556E-03	-5.63380E-03
+				key =	18838	186	-5.63380E-03	-4.28571E-03
+				key =	19538	183	-4.28571E-03	-2.89017E-03
+				key =	20230	181	-2.89017E-03	-4.38596E-03
+				key =	20914	178	-4.38596E-03	-1.84162E-03
+				key =	22000	176	-1.84162E-03	0.00000E+00				
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	1.000	0.00000E+00	-2.67990E-04
+				key =	1209	0.676	-2.67990E-04	-2.50859E-04
+				key =	2373	0.384	-2.50859E-04	-2.22321E-04
+				key =	3493	0.135	-2.22321E-04	-1.83503E-04
+				key =	4572	-0.063	-1.83503E-04	-1.34486E-04
+				key =	5613	-0.203	-1.34486E-04	-7.86853E-05
+				key =	6617	-0.282	-7.86853E-05	-1.75077E-05
+				key =	7588	-0.299	-1.75077E-05	1.17146E-05
+				key =	8527	-0.288	1.17146E-05	2.63736E-05
+				key =	9437	-0.264	2.63736E-05	3.73726E-05
+				key =	10320	-0.231	3.73726E-05	4.65658E-05
+				key =	11179	-0.191	4.65658E-05	5.26316E-05
+				key =	12015	-0.147	5.26316E-05	6.00490E-05
+				key =	12831	-0.098	6.00490E-05	6.26566E-05
+				key =	13629	-0.048	6.26566E-05	6.39386E-05
+				key =	14411	0.002	6.39386E-05	6.51042E-05
+				key =	15179	0.052	6.51042E-05	6.49007E-05
+				key =	15934	0.101	6.49007E-05	6.19112E-05
+				key =	16677	0.147	6.19112E-05	5.74555E-05
+				key =	17408	0.189	5.74555E-05	5.41667E-05
+				key =	18128	0.228	5.41667E-05	4.64789E-05
+				key =	18838	0.261	4.64789E-05	4.14286E-05
+				key =	19538	0.290	4.14286E-05	3.17919E-05
+				key =	20230	0.312	3.17919E-05	2.33918E-05
+				key =	20914	0.328	2.33918E-05	7.36648E-06
+				key =	22000	0.336	7.36648E-06	0.00000E+00				
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	10.18	0	0
+				key =	38	0	-0.5158	-0.5158
+				key =	90	-37.82	-0.8378	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	54	0	0
+				key =	38	45.94	-0.4083	-0.4083
+				key =	90	16	-0.6632	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	-1.33	0	-0.0084
+				key =	20	-1.41	0	0
+				key =	110	0	0.0247	0.0247
+				key =	200	1.41	0	0
+				key =	290	0	-0.0247	-0.0247
+				key =	360	-1.33	-0.0084	0
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	5.2	0	-10.4
+				key =	1	-5.2	-10.4	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	7.72097E+01	0.00000E+00	-3.60430E-02
+				key =	1209	4.34182E+01	-2.10787E-02	-2.10787E-02
+				key =	2373	2.44158E+01	-1.23196E-02	-1.23196E-02
+				key =	3493	1.37300E+01	-7.19507E-03	-7.19507E-03
+				key =	4572	7.72097E+00	-4.19865E-03	-4.19865E-03
+				key =	5613	4.34182E+00	-2.44775E-03	-2.44775E-03
+				key =	6617	2.44158E+00	-1.42546E-03	-1.42546E-03
+				key =	7588	1.37300E+00	-8.29107E-04	-8.29107E-04
+				key =	8527	7.72096E-01	-4.81593E-04	-4.81593E-04
+				key =	9437	4.34182E-01	-2.79320E-04	-2.79320E-04
+				key =	10320	2.44158E-01	-1.61739E-04	-1.61739E-04
+				key =	11179	1.37300E-01	-9.34892E-05	-9.34892E-05
+				key =	12015	7.72096E-02	-5.39362E-05	-5.39362E-05
+				key =	12831	4.34182E-02	-3.10539E-05	-3.10539E-05
+				key =	13629	2.44158E-02	-1.78409E-05	-1.78409E-05
+				key =	14411	1.37300E-02	-1.02266E-05	-1.02266E-05
+				key =	15179	7.72096E-03	-5.85132E-06	-5.85132E-06
+				key =	15934	4.34182E-03	-3.34664E-06	-3.34664E-06
+				key =	16677	2.44158E-03	-1.91301E-06	-1.91301E-06
+				key =	17408	1.37300E-03	-1.09278E-06	-1.09278E-06
+				key =	18128	7.72096E-04	-6.23736E-07	-6.23736E-07
+				key =	18838	4.34182E-04	-3.55689E-07	-3.55689E-07
+				key =	19538	2.44158E-04	-2.02621E-07	-2.02621E-07
+				key =	20230	1.37300E-04	-1.15290E-07	-1.15290E-07
+				key =	20914	7.72096E-05	-6.55134E-08	-6.55134E-08
+				key =	22000	0.00000E+00	0.00000E+00	0.00000E+00
+			}
+		}
 		Ocean
 		{
 			ocean = True
@@ -331,75 +460,3 @@
 		}
 	}
 }
-
-
-
-
-				VertexHeightNoiseRegional
-				{
-					order = 8
-					enabled = True
-					name = MountainNoise
-					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Rifts.png
-					Mod
-					{
-						deformity = 1100
-						frequency = 3
-						octaves = 4
-						persistence = 0.5
-						seed = 22122
-						noiseType = Billow
-						mode = High
-						lacunarity = 2.8
-					}
-				}
-				FlattenOceanRegional
-				{
-					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_IceRegional.png
-					name = Icecaps
-					order = 180000
-					Mod
-					{
-						enabled = true
-						oceanRadius = 1500
-					}
-				}
-				VertexSimplexNoiseColorRegional
-				{
-					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_IceRegional2.png
-					splitChannels = False
-					order = 114
-					enabled = True
-					name = IcePatch
-					Mod
-					{
-						blend = 0.85
-						colorStart = 0.89,0.87,0.86
-						colorEnd = 0.97,0.966,0.965,1
-						frequency = 4
-						octaves = 16
-						persistence = 0.5
-						seed = 65456
-						order = 13
-						enabled = True
-						name = IcePatch
-					}
-				}
-				VertexSimplexHeightAbsoluteRegional
-				{
-					order = 3
-					enabled = True
-					name = MapNoise
-					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_SeabedsRegional.png
-					Mod
-					{
-						deformity = 500
-						frequency = 5.5
-						octaves = 12
-						persistence = 0.6
-						seed = 24646
-						order = 2
-						enabled = True
-						name = VertexSimplexHeightAbsolute
-					}
-				} 
