--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
@@ -37,12 +37,13 @@
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
 			semiMajorAxis = 5262500
+			@semiMajorAxis *= 2 //i never got permission from myth to double these orbits but im pretty sure tremelo gets shredded if i dont
 			
 			eccentricity = 0.0092
 			inclination = 0.36
 			argumentOfPeriapsis = 19
 			longitudeOfAscendingNode = 200
-			meanAnomalyAtEpochD = 99
+			meanAnomalyAtEpochD = 3
 		}
 		
 		Ocean
