--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/Scatterer/Zhandar_Atmosphere.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/Scatterer/Zhandar_Atmosphere.cfg
@@ -12,13 +12,14 @@
 		HM = 12
 		BETA_MSca = 0.002,0.002,0.002
 		m_betaR = 0.002200,0.003105,0.007013
-		m_mieG = 1.0
-		rimBlend = -20
-		rimpower = 100
+		m_mieG = 0.9
+		rimBlend = 10
+		rimpower = 50
 		specR = 1
 		specG = 1
 		specB = 1
 		shininess = 10
+		averageGroundReflectance = 0.8
 		configPoints
 		{
 			Item
