--- a/GameData/PJ2/Scatterer/PlanetsList.cfg
+++ b/GameData/PJ2/Scatterer/PlanetsList.cfg
@@ -38,8 +38,8 @@
 		}
 		Item
 		{
-			celestialBodyName = PJ2Settings
-			transformName = PJ2Settings
+			celestialBodyName = ????
+			transformName = ????
 			loadDistance = 1000000
 			unloadDistance = 2000000
 			hasOcean = False
